--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   ],
   "require": {
     "php": ">=7.0",
-    "illuminate/support": "~5.1"
+    "illuminate/support": "~5.1|^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.0",
