--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
-    "illuminate/support": "~5.1|^6.0"
+    "php": "^7.4|^8.0",
+    "illuminate/support": "^6.0|^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.0",
