--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,33 @@
       "email": "daniel@lyften.com"
     }
   ],
+  "autoload": {
+    "psr-4": {
+      "VictoRD11\\LaravelMetaTags\\": "src/VictoRD11/LaravelMetaTags/"
+    }
+  },
   "require": {
-    "php": "^7.4|^8.0",
-     "illuminate/support": "^8.0"
+    "php": "^7.3|^8.0",
+    "illuminate/support": "^7.0|^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.0",
     "mockery/mockery": "^0.9.4",
     "friendsofphp/php-cs-fixer": "^2.16"
   },
-  "autoload": {
-    "psr-4": {
-      "VictoRD11\\LaravelMetaTags\\": "src/VictoRD11/LaravelMetaTags/"
+  "extra": {
+    "laravel": {
+      "providers": [
+        "VictoRD11\\LaravelMetaTags\\ServiceProvider"
+      ],
+      "aliases": {
+        "MetaTag": "VictoRD11\\LaravelMetaTags\\Facade"
+      }
+    },
+    "hooks": {
+      "pre-commit": [
+        "php-cs-fixer fix ."
+      ]
     }
   },
   "scripts": {
