--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     }
   },
   "require": {
-    "php": "^7.3|^8.0",
-    "illuminate/support": "^7.0|^8.0"
+    "php": "^7.3|^8.0.2",
+    "illuminate/support": "^7.0|^8.0|^9.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.0",
