--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     }
   },
   "require": {
-    "php": "^8.1.0|^8.2.0",
-    "illuminate/support": "^8.0|^9.0|^10.0"
+    "php": "^8.0",
+    "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~10.0",
